# SCLI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
.cache/clangd/index/: Page.cpp.8260D7D4E79ED207.idx  Page.h.8F266F36DA588B06.idx  Typedefs.h.4B7CB816905F60FA.idx  main.cpp.DA5ABC784664B881.idx
docs/html/: _c_vec_len_8cpp.html  _c_vec_len_8h_source.html  _command_8cpp.html  _command_8h_source.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _page_8cpp.html  _page_8h_source.html  _page_builder_8h.html  _page_builder_8h_source.html  _utils_8h.html  _utils_8h.js  _utils_8h_source.html  annotated.html  annotated_dup.js  chrono_8h.html  chrono_8h_source.html  class_command-members.html  class_command.html  class_commands_1_1_co_geo_1_1_vectors_1_1_c_vec_len-members.html  class_commands_1_1_co_geo_1_1_vectors_1_1_c_vec_len.html  class_page-members.html  class_page.html  class_utils-members.html  class_utils.html  class_utils.js  class_utils_1_1_clock-members.html  class_utils_1_1_clock.html  class_utils_1_1_str_style-members.html  class_utils_1_1_str_style.html  classes.html  dir_0092b760f4a9852f522ad959caaaf196.html  dir_0092b760f4a9852f522ad959caaaf196.js  dir_018e9aafb459e6e1a4953404cb0c0b1d.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.js  dir_06c462543f474fa21db16252754698c8.html  dir_06c462543f474fa21db16252754698c8.js  dir_0a58e4e6c4f038e793f57bbc33629602.html  dir_3541e64e3d5ad8bf59ff204938639f23.html  (+37 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_3.js  functions_0.js  searchdata.js
docs/latex/: _c_vec_len_8cpp.tex  _c_vec_len_8h_source.tex  _command_8cpp.tex  _command_8h_source.tex  _core_8h.tex  _core_8h_source.tex  _page_8cpp.tex  _page_8h_source.tex  _page_builder_8h.tex  _page_builder_8h_source.tex  _utils_8h.tex  _utils_8h_source.tex  annotated.tex  chrono_8h.tex  chrono_8h_source.tex  class_command.eps  class_command.tex  class_commands_1_1_co_geo_1_1_vectors_1_1_c_vec_len.eps  class_commands_1_1_co_geo_1_1_vectors_1_1_c_vec_len.tex  class_page.tex  class_utils.tex  class_utils_1_1_clock.tex  class_utils_1_1_str_style.tex  files.tex  general_8h.tex  general_8h_source.tex  hierarchy.tex  main_8cpp.tex  refman.tex  vectors_8cpp.tex  vectors_8h_source.tex
src/: CMakeLists.txt  main.cpp
src/classes/: CMakeLists.txt  Command.cpp  Page.cpp
src/classes/cmds/: CMakeLists.txt
src/classes/cmds/cogeo/: CMakeLists.txt
src/classes/cmds/cogeo/vectors/: CMakeLists.txt  CVecLen.cpp  CVecLerp.cpp
src/classes/core/: CMakeLists.txt  Command.cpp  Page.cpp
src/classes/static/utils/: CMakeLists.txt  SCLIUtils.cpp
src/include/: SCLICore.h  SCLIPageBuilder.h  SCLIUtils.h  Typedefs.h
src/include/classes/: Command.h  Page.h
src/include/classes/cmds/cogeo/vectors/: CVecLen.h
src/include/classes/core/: Page.h
src/include/mathlib/: vectors.h
src/include/pages/: Page.h
src/include/scli/: Core.h  CoreCommand.h  PageBuilder.h  Utils.h
src/include/scli/classes/: Command.h  Page.h
src/include/scli/classes/cmds/cogeo/vectors/: CVecLen.h  CVecLerp.h
src/include/types/: chrono.h  general.h
src/mathlib/: CMakeLists.txt  vectors.cpp
src/pages/: CMakeLists.txt  Page.cpp
src/scli/: CMakeLists.txt  Core.cpp  PageBuilder.cpp  SCLICore.cpp  SCLIPageBuilder.cpp  Utils.cpp  ggfd.cpp  sda.cpp
tests/: CMakeLists.txt  test.cpp
